--- a/extension/output.css
+++ b/extension/output.css
@@ -2945,6 +2945,11 @@
   overflow: hidden;
   min-height: 0 !important;
 }
+.collapse > input:not(:checked) ~ .collapse-content {
+  margin-bottom: calc(var(--spacing) * 0);
+  background-color: transparent;
+  border: none !important;
+}
 .collapse-content.view-card {
   grid-template-columns: repeat(auto-fill, minmax(calc(250px * var(--category-size)), 1fr));
 }
